manifests/planetarium-deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "planetarium-deployment"
  namespace: "default"
  labels:
    app: "planetarium"
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: "planetarium"
  template: 
    metadata: 
      labels:
        app: "planetarium"
    spec:
      # terminationGracePeriodSeconds: 30
      containers:
      - name: "planetarium-app"
        image: "oloringray007/planetarium:20"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
        volumeMounts: 
          - mountPath: /logs
            name: logs
      - name: promtail-container
        image: grafana/promtail
        args:
        - -config.file=/etc/promtail/promtail.yml
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
        - name: logs
        - name: promtail-config
          configMap:
            name: promtail-config
