manifests/planetarium-pod.yml
apiVersion: v1
kind: Pod 
metadata:
  name: planetarium-pod
  labels:
    app: planetarium
spec:
  containers:
    - name: planetarium-container
      image: qq470706475/planetarium:1
      ports:
      - containerPort: 8080
